# pong

./: .gitignore  CMakeLists.txt  README.md
src/: game.c  game.h  main.c  main.h  menu.c  menu.h
